<resources>
    <string name="app_name">Authentication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_have">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_you_password">Forgot you password?</string>
    <string name="powered_by_capture_solutions">Powered by Capture Solutions</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <!--    activity labels-->
    <string name="home_activity">Home</string>
    <string name="done">Done</string>
    <string name="todo">TODO</string>
    <string name="dismiss">Dismiss</string>
    <string name="data_name">Name </string>
    <string name="data_code">Code </string>

</resources>

