<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_gradient"
    tools:mContext=".activities.MainActivity">

    <LinearLayout
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            app:srcCompat="@drawable/ic_barcelona"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/logo" />

        <EditText
            android:drawableStart="@drawable/ic_person"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="5dp"
            android:padding="15dp"
            android:textColor="@color/iconColor"
            android:hint="@string/email"
            android:inputType="text"
            android:textColorHint="@android:color/white"
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:drawableStart="@drawable/ic_padlock"
            android:drawableLeft="@drawable/ic_padlock"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:padding="15dp"
            android:textColor="@color/iconColor"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"
            android:inputType="textPassword"
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox" />

        <Button
            android:background="@drawable/login_button_background"
            android:id="@+id/signInButton"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <Button
            android:id="@+id/sigUpnButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign_up_button_background"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/iconColor" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:textColor="@android:color/white"
            android:text="@string/forgot_you_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            app:srcCompat="@drawable/cslogo"
            android:layout_gravity="center_horizontal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:text="@string/powered_by_capture_solutions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>